# cpp-arnoldi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml
examples/: CMakeLists.txt  README.md  arnoldi_dndrv1.cpp  arnoldi_dndrv2.cpp  arnoldi_dsdrv1.cpp  arnoldi_dsdrv2.cpp  arnoldi_dsdrv4.cpp  arnoldi_dsdrv5.cpp  arnoldi_dsdrv6.cpp  arnoldi_herm.cpp  arnoldi_mpi.cpp  arnoldi_nonsym.cpp  arnoldi_sym.cpp  arnoldi_sym_cpu.cpp  arnoldi_sym_cuda.cu  benchmark.cpp  kernels.hpp  lapack_extra.hpp  symmetric_laplacian.cpp
include/arnoldi/: arnoldi.hpp  comm.hpp  cuda.hpp  detail.hpp  mpi.hpp
include/arnoldi/detail/: arnoldi_cb.hpp  blas_bindings.hpp  debug.hpp  eig.hpp  getv0.hpp  helpers.hpp  nonsym.hpp  ops.hpp  sort.hpp  stats.hpp  sym.hpp
tests/: CMakeLists.txt  test_getv0.cpp  test_helpers.cpp  test_low_level_validation.cpp  test_modes.cpp  test_solver.cpp  test_solver_cuda.cu  test_validation.cpp
